<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:context=".Activity.UserActivity.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:padding="@dimen/padding_16dp">

            <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                >

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="30dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="#FFFFFF" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:layout_centerInParent="true"
                        android:src="#0077bb" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageViewAva"
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_add_black_48dp" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/rounded_edittext_login"
                    android:hint="Username"
                    android:inputType="text"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#7c7c7c"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/rounded_edittext_signup"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#7c7c7c"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_edittext_login_password"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#7c7c7c"
                    android:textSize="14sp" />


                <Button
                    android:id="@+id/sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/rounded_button"
                    android:text="@string/action_sign_in_short"
                    android:textAllCaps="false"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@null"
                    android:text="@string/btn_forgot_password"
                    android:textAllCaps="false"
                    android:textColor="#4d4d4d"
                    android:visibility="gone" />

                <!-- Link to Login Screen -->

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@null"
                    android:text="@string/btn_link_to_login"
                    android:textAllCaps="false"
                    android:textColor="#ffc700"
                    android:textSize="15dp"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>